--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is the project of the advanced React.js course in Platzi",
   "main": "index.js",
   "scripts": {
+    "vercel-build":"npm run build",
     "build": "webpack",
     "dev": "webpack-dev-server"
   },
