--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "vercel-build": "npm run build",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --history-api-fallback"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.3.0",
     "intersection-observer": "^0.11.0",
