--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "vercel-build": "npm run build",
     "build": "webpack",
-    "dev": "webpack-dev-server --history-api-fallback"
+    "dev": "webpack-dev-server --history-api-fallback",
+    "serve:dev": "webpack --mode development && npx serve dist -s"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "styled-components": "^5.2.0"
   }
