--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vercel-build": "npm run build",
     "build": "webpack",
     "dev": "webpack-dev-server --history-api-fallback",
-    "serve:dev": "webpack --mode development && npx serve dist -s"
+    "serve:dev": "webpack --mode development && npx serve dist -s",
+    "test": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -22,11 +23,13 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "cypress": "^5.5.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-pwa-manifest": "^4.2.0"
+    "webpack-pwa-manifest": "^4.2.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
